--- a/campanha/index.html
+++ b/campanha/index.html
@@ -6,31 +6,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assents/css/style.css">
+
     <title>Campanha</title>
+    
 </head>
 
 <body>
-    <div class="container">
+
+    <section class="topo">
+
         <div class="conteudo">
-            <img src="assents/img/teclado.jpg" alt="">
+            
             <p>Conteúdo</p>
 
         </div>
         <div class="formulario">
             Formulario
             <form action="agradecimento.php" method="post">
-                <label for="nome"> Nome </label>
-                <input type="text" id="nome" name="nome" placeholder="Digite seu nome">
-                <label for="email"> Email </label>
-                <input type="text" id="email" name="email" placeholder="Digite seu melhor e-mail">
-                <label for="whatsapp"> WhatsApp </label>
-                <input type="text" id="whatsapp" name="whatsapp" placeholder="Digite o número do WhatsApp">
+                <div>
+                    <label for="nome"> Nome </label>
+                    <input type="text" id="nome" name="nome" placeholder="Digite seu nome">
+                </div>
+                <div>
+                    <label for="email"> Email </label>
+                    <input type="text" id="email" name="email" placeholder="Digite seu melhor e-mail">
+                </div>
+                <div>
+                    <label for="whatsapp"> WhatsApp </label>
+                    <input type="text" id="whatsapp" name="whatsapp" placeholder="Digite o número do WhatsApp">
+                </div>
                 <button>CADASTRE-SE</button>
             </form>
 
         </div>
-    </div>
 
+    </section>
+    <section class="beneficios">
+        <div >
+            <img class="img-beneficios" src="assents/img/beneficio.jpg" alt="">
+            Imagem 1
+        </div>
+        <div>
+            <img class="img-beneficios" src="assents/img/produto.jpg" alt="">
+            Imagem 2
+        </div>
+        <div>
+            <img class="img-beneficios" src="assents/img/codigo.jpg" alt="">
+            Imagem 3
+        </div>
+    </section>
+    <section class="depoimento">
+        <div >
+            <img class="img-depoimento" src="assents/img/perfil1.jpg" alt="">
+            Imagem a
+        </div>
+        <div >
+            <img class="img-depoimento" src="assents/img/perfil2.jpg"alt="">
+            Imagem b
+        </div>
+        <div >
+            <img class="img-depoimento" src="assents/img/perfil3.jpg" alt="">
+            Imagem c
+        </div>
+    </section>
+    <section class="rodape">
+        Desenvolvido por fulano
+    </section>
 </body>
 
 </html>
