--- a/campanha/index.html
+++ b/campanha/index.html
@@ -44,21 +44,22 @@
     <section class="beneficios">
         <div >
             <img class="img-beneficios" src="assents/img/beneficio.jpg" alt="">
-            Imagem 1
+            <p>Controle seu perfil de consumo.</p>
         </div>
         <div>
             <img class="img-beneficios" src="assents/img/produto.jpg" alt="">
-            Imagem 2
+            <p>Deixe todos os seus produtos<br> na palma 
+                 da mão de seus clientes.</p>
         </div>
         <div>
             <img class="img-beneficios" src="assents/img/codigo.jpg" alt="">
-            Imagem 3
+            <p>Tenha um codigo limpo.</p>
         </div>
     </section>
     <section class="depoimento">
         <div >
             <img class="img-depoimento" src="assents/img/perfil1.jpg" alt="">
-            Imagem a
+            <p>It is a long established  readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less </p>
         </div>
         <div >
             <img class="img-depoimento" src="assents/img/perfil2.jpg"alt="">
